# ejercicios-stl-esteban-arosemena

./: CMakeLists.txt  README.md  main.cpp
ciencias/física/: fisica.cpp  fisica.h
geometria/: circulo.cpp  geometria.h  triangulo.cpp
matematicas/: matematicas.cpp  matematicas.h
